--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "type": "magento2-module",
     "version": "1.1.0",
     "license": [
-        "Commercial"
+        "MIT License"
     ],
     "autoload": {
         "files": [
